fix library body and main height for scrolling behaviour on mobile

--- a/SRC/css/layout/library.css
+++ b/SRC/css/layout/library.css
@@ -458,7 +458,6 @@ section.is-open {
   width: 40px;
   height: 40px;
   padding: 0 0 10px 10px;
-  border: none;
   border-radius: 0px 0px 0px 50px;
   background-color: light-dark(rgba(0, 0, 0, 0.1), rgba(255, 255, 255, 0.1));
   color: light-dark(#1a1a2e, #fff);
@@ -771,4 +770,11 @@ a::selection {
 #theory-link:active:before {
   background-color: var(--c-g-40);
   transform: scale(0.85);
+}
+
+@media (max-width: 660px) {
+  main#library,
+  body:has(main#library) {
+    min-height: calc(100vh - var(--body-margin-top-mobile) - 100px) !important;
+  }
 }
